fixed overflow scroll on sidebar

--- a/src/components/Dashboard/Sidebar/SidebarExchange/sidebarexchange.css
+++ b/src/components/Dashboard/Sidebar/SidebarExchange/sidebarexchange.css
@@ -2,6 +2,7 @@
 	width: 80%;
 	color: #fff;
 	margin-top: 40px;
+	overflow: scroll;
 }
 
 .sidebar--exchange h3 {
